--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             heading towards a streamlined cloud solution. User generated content in real-time will have
                             multiple touchpoints for offshoring.</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Dec 2020 - Present</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -87,12 +87,12 @@
                         <p>Making Websites like Portfolio's , Business Website and other Personal and commertial website
                             development</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary"> March 2020-Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary"> Sep 2020-Dec 2020</span></div>
                 </div>
 
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Design Intern</h3>
+                        <h3 class="mb-0">Web Design (Internship)</h3>
                         <div class="subheading mb-3">Arvo Technologies</div>
                         <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically
                             procrastinate
@@ -100,7 +100,7 @@
                             convergence
                             without revolutionary ROI.</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">March 2020-Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">March 2020-Sep 2020</span></div>
                 </div>
             </div>
         </section>
@@ -202,7 +202,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Mobile Web Specialist 
+                        Mobile(Responsive) Web Specialist 
                     </li>
                   
                     <li>
