--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="social-icons">
                     <a class="social-icon" href="https://in.linkedin.com/in/bharat-borude-a1849b1a7"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://www.instagram.com/b_h_a_r_a_t_sb_23/"><i class="fab fa-instagram"></i></a>
-                    <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="social-icon" href="https://twitter.com/bharatborude1"><i class="fab fa-twitter"></i></a>
                     <a class="social-icon" href="https://www.facebook.com/bharat.borude.12"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
