--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Bharat Borude,web Developer at Arvo technologies view Portfolio">
+	
+      
+    
+    <meta name="template" content="homepagetemplate1">		
+<meta property="og:title" content="Bharat Borude Portfolio">
+    <meta property="og:title" content="Arvo technologies">
+<meta property="og:url" content="https://bharat-the-coder.github.io/portfolio-bharat/index.html">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Bharat Borude">
+<meta property="og:description" content="Bharat Borude A web developer At Arvo technologies">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
